# powerhash

./: Cargo.toml  README.md  example-config.json
src/: main.rs
