
[package]
name = "powhasher"
version = "0.2.2"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "CryptoNight miner for Monero and other CryptoNote coins "
repository = "https://github.com/kazcw/powhasher"

[dependencies]
yellowsun = "0.2"
cn-stratum = "0.4.0"